<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mrps_bc"
    tools:context="com.example.mrpsbeta.BMain" >

    <Button
        android:id="@+id/bTurnOn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/bTurnOn"
        android:background="@color/olive"
        android:onClick="selfTurnOn" />

    <Button
        android:id="@+id/bVisible"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bTurnOn"
        android:layout_below="@+id/bTurnOn"
        android:text="@string/bVisible"
        android:background="@color/olive"
        android:onClick="setVisible" />

    <Button
        android:id="@+id/bListDev"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bTurnOn"
        android:layout_below="@+id/bVisible"
        android:text="@string/bListDev"
        android:background="@color/olive"
        android:onClick="listDevInRange" />

    <Button
        android:id="@+id/bTurnOff"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bTurnOn"
        android:layout_below="@+id/bListDev"
        android:text="@string/bTurnOff"
        android:background="@color/olive"
        android:onClick="selfTurnOff" />

    <ListView
        android:id="@+id/listDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:layout_toRightOf="@+id/bListDev" >
        <!--android:onClick="listDevClicked" >-->

    </ListView>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bTurnOff"
        android:layout_centerVertical="true"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/bConnect"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="connectServer"
        android:background="@color/orange"
        android:text="@string/bConnect" />

    <Button
        android:id="@+id/bHost"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bConnect"
        android:layout_alignParentLeft="true"
        android:onClick="hostServer"
        android:background="@color/orange"
        android:text="@string/bHost" />

</RelativeLayout>

